--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
         <h1>
             Hello Github & Vercel
         </h1>
+
+        <p>
+            aku hanya orang kebetulan lewat.
+        </p>
     </body>
 </html>
