Upload awal index.html

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
     <head>
         <title>
-            Project pertama
+            Profil Kelas
         </title>
     </head>
     <body>
         <h1>
-            Hello Github & Vercel
+            Selmat Datang  di Kelas Web
         </h1>
 
-        <h2>
-            aku hanya orang kebetulan lewat.
-        </h2>
+        <p>
+            Ini adalah website sedehana
+        </p>
     </body>
 </html>
