Update isi index.html dan tambah link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         </h1>
 
         <p>
-            Ini adalah website sedehana
+            Belajar dari nol sampai website online.
+        
         </p>
+
+        <a href="about.html"> Tentang Kelas</a>
     </body>
 </html>
